--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <title>This is test page</title>
 </head>
 <body>
-<h1>This is our first CICD using jenkins. For testing jenkins by shri shri 1008</h1>
+<h1>This is our first CI</h1>
 </body>
 </html>
