--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>This is a test page</title>
+<title>This is a Jenkins page</title>
 </head>
 <body>
 <h1>This is our first CI/CD</h1>
